# NetworkDevicesMetrics

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
src/: manage.py  requirements.txt
src/networkdevicesmetrics/: asgi.py  settings.py  urls.py  wsgi.py
src/node_monitoring/: admin.py  apps.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
src/node_monitoring/fixtures/: metric_types.json
src/node_monitoring/management/commands/: load_metric_types.py
src/node_monitoring/migrations/: 0001_initial.py  0002_alter_node_options.py  0003_alter_node_expected_cpu_name_and_more.py  0004_alter_node_max_cpu_load.py  0005_metrictype.py  0006_nodemetrichistory.py
